fix(DiscoverCard): fix description text overflow,

--- a/src/components/Discover/Discover.css
+++ b/src/components/Discover/Discover.css
@@ -85,6 +85,7 @@
   @media (--medium) {
     flex: 0 0 50%;
     max-width: 50%;
+    height: 240px;
   }
 
   @media (--small) {
